--- a/locales/uk/translation.json
+++ b/locales/uk/translation.json
@@ -1,13 +1,36 @@
 {
   "api": {
-    "userExistsError": "Користувач з такою поштою вже існує",
-    "registrationSuccess": "Реєстрація пройшла успішно. Будь ласка, перевірте пошту для верифікації вашого акаунту."
+    "userExistsError": "Користувач з цією електронною поштою вже існує",
+    "registrationSuccess": "Реєстрація успішна. Будь ласка, перевірте свою пошту, щоб підтвердити обліковий запис.",
+    
+    "admin": {
+      "roleAlreadyExists": "Користувач вже має цю роль",
+      "roleNotFound": "У користувача немає зазначеної ролі",
+      "invalidAction": "Неприпустима дія. Використовуйте 'add' (додати) або 'remove' (видалити).",
+      "roleAddedSuccess": "Роль '{role}' успішно додано.",
+      "roleRemovedSuccess": "Роль '{role}' успішно видалено.",
+      "userNotFound": "Користувача не знайдено.",
+      "adminsNotFound": "Адміністраторів не знайдено."
+    },
+    "auth": {
+      "userNotFound": "Користувача не знайдено.",
+      "verifyEmailFirst": "Будь ласка, спочатку підтвердіть вашу електронну пошту.",
+      "invalidCredentials": "Неправильні облікові дані.",
+      "invalidToken": "Недійсний або застарілий токен.",
+      "emailVerifiedSuccess": "Електронну пошту успішно підтверджено.",
+      "emailAlreadyVerified": "Ця електронна адреса вже підтверджена.",
+      "verificationResentSuccess": "Лист для підтвердження було надіслано повторно.",
+      "avatarNotFound": "Аватар не знайдено.",
+      "currentPasswordRequired": "Поточний пароль є обов'язковим для встановлення нового.",
+      "invalidCurrentPassword": "Введений вами поточний пароль є невірним.",
+      "profileUpdatedSuccess": "Профіль успішно оновлено."
+    }
   },
   "email": {
-    "verificationSubject": "Підтвердіть вашу електронну пошту в Chess School",
+    "verificationSubject": "Підтвердіть вашу електронну пошту в Шаховій Школі",
     "welcome": "Ласкаво просимо до Шахової Школи!",
     "instruction": "Залишився лише один крок. Будь ласка, підтвердіть вашу електронну пошту, натиснувши кнопку нижче:",
-    "buttonText": "Підтвердити Пошту",
+    "buttonText": "Підтвердити пошту",
     "linkInstruction": "Якщо кнопка не працює, скопіюйте та вставте це посилання у ваш браузер:"
   }
 }
